--- a/Bogado.Candela.2C.TPFinal/View/View.csproj
+++ b/Bogado.Candela.2C.TPFinal/View/View.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="FrmPelicula.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="FrmSocio_Alquileres.cs">
       <SubType>Form</SubType>
     </Compile>
