agrego historial de alquileres

--- a/Bogado.Candela.2C.TPFinal/View/View.csproj
+++ b/Bogado.Candela.2C.TPFinal/View/View.csproj
@@ -16,6 +16,9 @@
     <Compile Update="FrmPelicula.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Update="FrmHistorial_Alquileres.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="FrmSocio_Alquileres.cs">
       <SubType>Form</SubType>
     </Compile>
