--- a/Bogado.Candela.2C.TPFinal/View/View.csproj
+++ b/Bogado.Candela.2C.TPFinal/View/View.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="FrmAdmin_Usuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="FrmHome_Admin.cs" />
     <Compile Update="FrmPelicula.cs">
       <SubType>Form</SubType>
     </Compile>
